🔨 Fix A tag wrap aタグが折りたたまれないデザイン上の問題を修正

--- a/app/assets/stylesheets/style/pc/common/timeline.scss
+++ b/app/assets/stylesheets/style/pc/common/timeline.scss
@@ -56,6 +56,7 @@
         }
 
         &_content {
+          word-break: break-all;
           padding: 10px 0;
         }
         &_img {
